# tap-sftp

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
tap_nicesftp/: client.py  discover.py  sync.py  tap.py
tap_nicesftp/singer_encodings/: csv_handler.py  json_schema.py
tap_sftp/: __init__.py  aws_ssm.py  client.py  decrypt.py  discover.py  sync.py  tap.py
tap_sftp/singer_encodings/: compression.py  csv.py  csv_handler.py  json_schema.py
tests/configuration/: fake_file.txt  fixtures.py  skip_rows_file.csv  unsanitized_file.csv
tests/tox_tests/: test_med_00_aws_ssm.py  test_med_00_client.py  test_med_00_compression.py  test_med_00_decrypt.py  test_med_00_discover.py  test_med_00_parse_csv.py  test_med_00_sync.py  test_med_00_tap_sftp.py
